# src/hosting-servers/index.ts
@@ -1,4 +1,0 @@
-export * from './hosting-server.module';
-export * from './hosting-server.service';
-export * from './hosting-server.controller';
-export * from './entities/hosting-server.entity';
